--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 
 		<div id="wrapper">
-
+			<h1>Frederic Huang</h1>                                                                                                                                                                                                                                                                                                                                               
 		</div>
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
