--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
 	<body>
 
 		<div id="wrapper">
-			<h1>Frederic Huang</h1>                                                                                                                                                                                                                                                                                                                                               
+			<div class="navbar">
+				<h2>Frederic Huang</h2>
+				<ul>
+					<li>Github</li>
+					<li>CAD</li>
+					<li>3D Printing</li>
+					<li>Rocketry</li>
+					<li>Resume</li>
+				</ul>
+			</div>
+
+			<div class="fullscreen">
+				
+			</div>
+
+
+
 		</div>
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
