navbar and image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+		<!-- CSS -->
+		<link type="text/css"rel="stylesheet" href="/css/primary.css">
+
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -19,19 +22,56 @@
 	<body>
 
 		<div id="wrapper">
-			<div class="navbar">
-				<h2>Frederic Huang</h2>
-				<ul>
-					<li>Github</li>
-					<li>CAD</li>
-					<li>3D Printing</li>
-					<li>Rocketry</li>
-					<li>Resume</li>
-				</ul>
-			</div>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  				<a class="navbar-brand" href="https://frederic-h4800.github.io">Frederic Huang</a>
+  				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    				<span class="navbar-toggler-icon"></span>
+  				</button>
 
-			<div class="fullscreen">
-				
+  				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+    				<ul class="navbar-nav mr-auto">
+      					<!-- <li class="nav-item active">
+        					<a class="nav-link" href="https://frederic-h4800.github.io">Home <span class="sr-only">(current)</span></a>
+      					</li> -->
+      					<li class="nav-item">
+        					<a class="nav-link disabled" href="cad.html" tabindex="-1" aria-disabled="true">CAD</a>
+      					</li>
+      					<li class="nav-item">
+        					<a class="nav-link disabled" href="3d_printing.html" tabindex="-1" aria-disabled="true">3D Printing</a>
+      					</li>
+      					<li class="nav-item">
+        					<a class="nav-link disabled" href="rocketry.html" tabindex="-1" aria-disabled="true">Rocketry</a>
+      					</li>
+      					<!-- 
+      					<li class="nav-item">
+        					<a class="nav-link" href="cad.html">CAD</a>
+      					</li>
+      					<li class="nav-item">
+        					<a class="nav-link" href="3d_printing.html">3D Printing</a>
+      					</li>
+      					<li class="nav-item">
+        					<a class="nav-link" href="rocketry.html">Rocketry</a>
+      					</li> -->
+      					
+    				</ul>
+    				<span class="navbar-text">
+      					<a href="https://github.com/Frederic-h4800"><button type="button" class="btn btn-outline-light">GitHub</button></a>
+      					<button type="button" class="btn btn-outline-ligh" disabled>Resume</button>
+    				</span>
+<!--     <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form> -->
+  				</div>
+			</nav>
+
+			<div class="card bg-dark text-white">
+  				<img src="~/Documents/coding/Frederic-h4800.github.io/pics/cmatrix.png" class="card-img" alt="cmatrix background">
+  				<div class="card-img-overlay">
+    				<h5 class="card-title">Frederic Huang</h5>
+    				<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    				<p class="card-text">Last updated 3 mins ago</p>
+  				</div>
 			</div>
 
 
