fixed css and image directories

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- CSS -->
-		<link type="text/css"rel="stylesheet" href="/css/primary.css">
+		<link type="text/css"rel="stylesheet" href="css/primary.css">
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -66,7 +66,7 @@
 			</nav>
 
 			<div class="card bg-dark text-white">
-  				<img src="~/Documents/coding/Frederic-h4800.github.io/pics/cmatrix.png" class="card-img" alt="cmatrix background">
+  				<img src="pics/cmatrix.png" class="card-img" alt="cmatrix background">
   				<div class="card-img-overlay">
     				<h5 class="card-title">Frederic Huang</h5>
     				<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -74,7 +74,9 @@
   				</div>
 			</div>
 
-
+			<div id="footer">
+				<p>Frederic Huang</p>
+			</div>
 
 		</div>
 
