--- a/index.html
+++ b/index.html
@@ -65,20 +65,18 @@
   				</div>
 			</nav>
 
-			<div class="card bg-dark text-white">
-  				<img src="pics/cmatrix.png" class="card-img" alt="cmatrix background">
-  				<div class="card-img-overlay">
-    				<h5 class="card-title">Frederic Huang</h5>
-    				<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    				<p class="card-text">Last updated 3 mins ago</p>
-  				</div>
+			<div class="card text-white bg-dark mb-3" style="width: 47rem;">
+				<div class="card-body">
+			 		<h5 class="card-title">About Me</h5>
+			 		<p class="card-text">Hello World! My name is Frederic and I am an aerospace enthusiast, GNU/Linux user, not the best programmer, and a 3D printing hobbyest.</p>
+				</div>
 			</div>
-
+<!-- 
 			<div id="footer">
 				<p>Frederic Huang</p>
 			</div>
 
-		</div>
+		</div> -->
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
